SET(CK_DEMO_SRC camkit_demo.c)
SET(CK_DEMO_NAME camkit_demo)
ADD_EXECUTABLE(${CK_DEMO_NAME} ${CK_DEMO_SRC})
TARGET_LINK_LIBRARIES(${CK_DEMO_NAME} ${CK_NAME})

SET(CK_STM_SRC camstream.c)
SET(CK_STM_NAME camstream)
ADD_EXECUTABLE(${CK_STM_NAME} ${CK_STM_SRC})
TARGET_LINK_LIBRARIES(${CK_STM_NAME} ${CK_NAME})
