SET(CK_TOOL_SRC cktool.c)
SET(CK_TOOL_NAME cktool)
ADD_EXECUTABLE(${CK_TOOL_NAME} ${CK_TOOL_SRC})
TARGET_LINK_LIBRARIES(${CK_TOOL_NAME} ${CK_NAME})

SET(CK_SIMPLE_SRC simple_demo.c)
SET(CK_SIMPLE_NAME simple_demo)
ADD_EXECUTABLE(${CK_SIMPLE_NAME} ${CK_SIMPLE_SRC})
TARGET_LINK_LIBRARIES(${CK_SIMPLE_NAME} ${CK_NAME})
